--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -4,10 +4,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  
-  
-  
+
+  .promo-inner {
+    @include inner;
+  }
+
   h1 {
+    color: $color-white;
     font-weight: 600;
     line-height: 98px;
     font-size: 72px;
@@ -15,39 +18,8 @@
   }
 
   .promo-btn {
-    font-size: 42px;
-    line-height: 57px;
-    min-width: 497px;
+    @include btn;
     padding: 30px 36px;
     margin: 50px 0 245px;
   }
 }
-
-// .promo {
-//   padding: 50px 0;
-//   background-color: lightsteelblue;
-//   border-radius: 10px;
-// }
-
-// .promo-inner {
-//   margin: 0 auto;
-//   width: 1024px;
-
-//   @media (max-width: 1279px) {
-//     width: auto;
-//     max-width: 1024px;
-//   }
-// }
-
-// .promo-ttl {
-//   font-size: $h1-fz-desktop;
-//   font-weight: $h1-fw;
-
-//   @media (max-width: 1279px) {
-//     font-size: $h1-fz-tablet;
-//   }
-
-//   @media (max-width: 669px) {
-//     font-size: $h1-fz-mobile;
-//   }
-// }
