--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 // common files
 @import "common/_variables";
 @import "common/_fonts";
+@import "common/mixins.scss";
 @import "common/_common";
 
 // blocks
