--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -1,24 +1,61 @@
 .features {
+  text-align: center;
+
+  .features-inner {
+    @include inner;
+  }
+
+  h2 {
+    color: $color-dark;
+    font-size: 64px;
+    line-height: 87px;
+    margin: 130px 0 50px;
+    font-weight: 400;
+  }
+
+  .features-butterfly {
+    margin-top: 50px;
+    margin-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  .features-card {
+    width: 25%;
+    padding: 10px;
+  }
+
+  .card {
+    position: relative;
+    display: block;
+  }
+
+  span {
+    position: absolute;
+    width: 100%;
+    top: 79.13%;
+    bottom: 0.15%;
+    left: 0px;
+    color: $color-white;
+    padding: 15px;
+    background: rgba(0, 0, 0, 0.4);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
     text-align: center;
+  }
 
+  img {
+    display: block;
+    max-width: 100%;
+  }
 
-    h2 {
-        color: $color-dark;
-        font-size: 64px;
-        line-height: 87px;
-        margin: 130px 0 50px;
-    }
+  .btn-features {
 
-    img {
-        width: 300px;
-        height: 300px;
-    }
-
-    .btn-features {
-        min-width: 497px;
-        font-size: 42px;
-        line-height: 57px;
-        padding: 30px 36px;
-        margin: 60px 0 130px ;
-    }
+    @include btn;
+    padding: 30px 36px;
+    margin: 60px 0 130px;
+  }
 }
