--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -9,37 +9,56 @@ footer {
   .footer-num {
     font-size: 28px;
     line-height: 38px;
-  }
-  .soc-items {
-    width: 26px;
-    height: 26px;
-    fill: none;
+    margin-right: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .footer-wrap {
     display: flex;
-    justify-content: space-around;
     align-items: center;
   }
 
   .fot-logo {
-    width: 16.66%;
-    margin-top: 31px;
-    margin-bottom: 31px;
+    @include logo;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 
-  .footer-num {
-      margin-top: 40px;
-      margin-bottom: 40px;
-      margin-right: 60px;
+  .footer-inner {
+    @include inner;
   }
 
-  .socials {
-      margin-left: -7px;
-      margin-right: -7px;
+  .foot-info {
+    width: 91.67%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .foot-soc {
+    display: flex;
+    width: 8.33%;
+    justify-content: space-between;
   }
 
   .soc-items {
-      padding: 7px;
+    width: 26px;
+    height: 26px;
+
   }
 }
+
+//   .footer-num {
+//     margin-top: 40px;
+//     margin-bottom: 40px;
+//     margin-right: 60px;
+//   }
+
+//   .socials {
+//     padding: 7px;
+//     width: 41.65%;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//   }
+// }
