--- a/src/styles/blocks/_lead.scss
+++ b/src/styles/blocks/_lead.scss
@@ -1,6 +1,6 @@
 .lead {
-  text-align: center;
   color: $color-dark;
+  background-color: rgba(51, 51, 51, 0.1);
 
   .lead-inner {
     @include inner;
@@ -18,37 +18,86 @@
     font-size: 28px;
     line-height: 38px;
     margin-top: 18px;
-    margin-bottom: 45px;
+    margin-bottom: 90px;
   }
 
-  .forms {
+  .form {
     display: flex;
-    align-items: center;
-    width: 33%;
+    flex-wrap: wrap;
+    margin-bottom: 130px;
     margin-left: -10px;
     margin-right: -10px;
-    
-    .form {
-        padding: 10px;
-    }
-
-    p {
-      font-size: 20px;
-      line-height: 27px;
-    }
   }
 
-  input {
-    
-    height: 100%;
-    min-width: 412px;
+  .form-field {
+    flex-basis: 33.33%;
+    padding: 10px;
+    justify-content: space-between;
   }
 
-  .btn-form {
-    @include btn;
-    min-width: 412px;
+  .form-label {
+    margin: 0;
+    font-size: 20px;
+    line-height: 27px;
+    color: $color-dark;
+  
+  }
+
+  .form-input {
+    padding-top: 35px;
+    padding-bottom: 35px;
+    padding-left: 30px;
+    width: 100%;
+    background: $color-white;
+    border-radius: 6px;
     font-size: 28px;
     line-height: 34px;
-    padding: 30px 140px;
+    color: $color-dark;
+    border: none;
   }
+
+  .btn {
+    margin-top: 25px;
+    height: 104px;
+    width: 100%;
+    color: $color-white;
+    border-radius: 6px;
+    text-align: center;
+    font-size: 28px;
+    line-height: 34px;
+    background-color: $color-accent;
+    border: none;
+
+  }
+
+  // .forms {
+  //   display: flex;
+  //   align-items: center;
+  //   width: 33%;
+  //   margin-left: -10px;
+  //   margin-right: -10px;
+
+  //   .form {
+  //       padding: 10px;
+  //   }
+
+  //   p {
+  //     font-size: 20px;
+  //     line-height: 27px;
+  //   }
+  // }
+
+  // input {
+
+  //   height: 100%;
+  //   min-width: 412px;
+  // }
+
+  // .btn-form {
+  //   @include btn;
+  //   min-width: 412px;
+  //   font-size: 28px;
+  //   line-height: 34px;
+  //   padding: 30px 140px;
+  // }
 }
