--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -14,7 +14,7 @@
     font-weight: 600;
     line-height: 98px;
     font-size: 72px;
-    margin: 200px 0 50px;
+    padding: 200px 0 50px;
   }
 
   .promo-btn {
