--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -33,13 +33,16 @@ footer {
   .footer-num {
     font-size: 28px;
     line-height: 38px;
-
+    margin-left: 20px;
+    margin-right: 30px;
   }
 
-  .social-items {
-    width: 26px;
-    height: 26px;
-  }
+
+    .social-items {
+      width: 26px;
+      height: 26px;
+    }
+
 }
 //   .foot-info {
 //     // width: 91.67%;
