--- a/src/styles/blocks/_lead.scss
+++ b/src/styles/blocks/_lead.scss
@@ -10,8 +10,8 @@
     font-weight: 400;
     font-size: 64px;
     line-height: 87px;
-    margin-top: 130px;
-    margin-bottom: 18px;
+    padding-top: 130px;
+    padding-bottom: 18px;
   }
 
   p {
@@ -24,9 +24,11 @@
   .form {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-end;
     margin-bottom: 130px;
     margin-left: -10px;
     margin-right: -10px;
+    padding-bottom: 120px;
   }
 
   .form-field {
@@ -57,7 +59,7 @@
   }
 
   .btn {
-    margin-top: 25px;
+    // margin-top: 25px;
     height: 104px;
     width: 100%;
     color: $color-white;
@@ -69,35 +71,4 @@
     border: none;
 
   }
-
-  // .forms {
-  //   display: flex;
-  //   align-items: center;
-  //   width: 33%;
-  //   margin-left: -10px;
-  //   margin-right: -10px;
-
-  //   .form {
-  //       padding: 10px;
-  //   }
-
-  //   p {
-  //     font-size: 20px;
-  //     line-height: 27px;
-  //   }
-  // }
-
-  // input {
-
-  //   height: 100%;
-  //   min-width: 412px;
-  // }
-
-  // .btn-form {
-  //   @include btn;
-  //   min-width: 412px;
-  //   font-size: 28px;
-  //   line-height: 34px;
-  //   padding: 30px 140px;
-  // }
 }
