--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -1,5 +1,17 @@
 .features {
   text-align: center;
+  padding-top: 130px;
+  padding-bottom: 130px;
+
+  @media (max-width: $tablet-max) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
 
   .features-inner {
     @include inner;
@@ -9,27 +21,58 @@
     color: $color-dark;
     font-size: 64px;
     line-height: 87px;
-    margin: 130px 0 90px;
+    margin-bottom: 90px;
     font-weight: 400;
+
+    @media (max-width: $tablet-max) {
+      font-size: 60px;
+      line-height: 82px;
+      margin-bottom: 80px;
+    }
+
+    @media (max-width: $mobile-max) {
+      font-size: 36px;
+      line-height: 49px;
+      margin-bottom: 60px;
+    }
   }
 
   .features-butterfly {
-    margin-top: 50px;
-    margin-bottom: 60px;
+    margin-bottom: 0px;
     display: flex;
     flex-wrap: wrap;
     margin-left: -10px;
     margin-right: -10px;
+
+    @media (max-width: $tablet-max) {
+      margin: 0 auto;
+    }
+
+    @media (max-width: $mobile-max) {
+    }
   }
 
   .features-card {
     width: 25%;
     padding: 10px;
+
+    @media (max-width: $tablet-max) {
+      width: 50%;
+    }
+
+    @media (max-width: $mobile-max) {
+      width: 100%;
+    }
   }
 
   .card {
     position: relative;
     display: block;
+    @media (max-width: $tablet-max) {
+    }
+
+    @media (max-width: $mobile-max) {
+    }
   }
 
   span {
@@ -44,19 +87,35 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
-    text-align: center;
+
+    @media (max-width: $mobile-max) {
+      padding-left: 0;
+      padding-right: 0;
+
+    }
   }
 
   img {
     display: block;
-    max-width: 100%;
+    width: 100%;
   }
 
   .btn-features {
-
     @include btn;
     margin: 0;
     padding: 30px 36px;
-    margin: 110px 0 130px;
+    margin-top: 150px;
+
+    @media (max-width: $tablet-max) {
+      margin-top: 80px;
+    }
+
+    @media (max-width: $mobile-max) {
+      margin-top: 60px;
+      max-width: 278px;
+      font-size: 24px;
+      line-height: 33px;
+      padding: 20px 14px;
+    }
   }
 }
