--- a/src/styles/blocks/_lead.scss
+++ b/src/styles/blocks/_lead.scss
@@ -1,6 +1,19 @@
 .lead {
   color: $color-dark;
   background-color: rgba(51, 51, 51, 0.1);
+  padding-top: 130px;
+  padding-bottom: 130px;
+  min-width: 1286px;
+
+  @media (max-width: $tablet-max) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding-top: 90px;
+    padding-bottom: 90px;
+  }
 
   .lead-inner {
     @include inner;
@@ -10,8 +23,20 @@
     font-weight: 400;
     font-size: 64px;
     line-height: 87px;
-    padding-top: 130px;
     padding-bottom: 18px;
+    text-align: center;
+
+    @media (max-width: $tablet-max) {
+      font-size: 60px;
+      line-height: 82px;
+      padding-bottom: 40px;
+    }
+
+    @media (max-width: $mobile-max) {
+      font-size: 36px;
+      line-height: 49px;
+      padding-bottom: 20px;
+    }
   }
 
   p {
@@ -19,22 +44,46 @@
     line-height: 38px;
     margin-top: 18px;
     margin-bottom: 90px;
+    text-align: center;
+    width: 100%;
+
+    @media (max-width: $mobile-max) {
+      font-size: 18px;
+      line-height: 25px;
+      margin-bottom: 60px;
+      text-align: inherit;
+      text-align: center;
+      padding: 0 10px;
+    }
   }
 
   .form {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
-    margin-bottom: 130px;
+
     margin-left: -10px;
     margin-right: -10px;
-    padding-bottom: 120px;
   }
 
   .form-field {
     flex-basis: 33.33%;
     padding: 10px;
     justify-content: space-between;
+
+    @media (max-width: $tablet-max) {
+      flex-basis: 50%;
+    }
+    @media (max-width: $mobile-max) {
+      flex-basis: 100%;
+    }
+  }
+
+  .form-button {
+    @media (max-width: $tablet-max) {
+      flex-basis: 100%;
+      width: 100%;
+    }
   }
 
   .form-label {
@@ -42,7 +91,6 @@
     font-size: 20px;
     line-height: 27px;
     color: $color-dark;
-  
   }
 
   .form-input {
@@ -59,7 +107,6 @@
   }
 
   .btn {
-    // margin-top: 25px;
     height: 104px;
     width: 100%;
     color: $color-white;
@@ -70,5 +117,9 @@
     background-color: $color-accent;
     border: none;
 
+    // @media (max-width: $tablet-max) {
+    //   flex: 1;
+    //   flex-basis: 100%;
+    // }
   }
 }
