--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -14,3 +14,9 @@ $color-white: #fff;
 // indents
 
 // breakpoints
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px;
+
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
