--- a/src/styles/blocks/_lead.scss
+++ b/src/styles/blocks/_lead.scss
@@ -3,7 +3,7 @@
   background-color: rgba(51, 51, 51, 0.1);
   padding-top: 130px;
   padding-bottom: 130px;
-  min-width: 1286px;
+
 
   @media (max-width: $tablet-max) {
     padding-top: 120px;
@@ -63,6 +63,10 @@
 
     margin-left: -10px;
     margin-right: -10px;
+
+    @media (max-width: $tablet-max) {
+      margin: 0;
+    }
   }
 
   .form-field {
