--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -18,23 +18,8 @@
 }
 
 .features-title {
-  color: $color-dark;
-  font-size: 64px;
-  line-height: 87px;
-  margin-bottom: 90px;
-  font-weight: 400;
 
-  @media (max-width: $tablet-max) {
-    font-size: 60px;
-    line-height: 82px;
-    margin-bottom: 80px;
-  }
-
-  @media (max-width: $mobile-max) {
-    font-size: 36px;
-    line-height: 49px;
-    margin-bottom: 60px;
-  }
+  @include h2;
 }
 
 .features-butterfly {
@@ -79,7 +64,6 @@
 span {
   position: absolute;
   width: 100%;
-  // top: 79.13%;
   bottom: 0;
   left: 0px;
   color: $color-white;
