--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -1,21 +1,28 @@
-// .features-inner {
-//   h2 {
-//     margin-top: 220px;
-//     margin-bottom: 77px;
-//   }
-// }
 
-// .catalog-search {
-//   font-weight: 600;
-//   font-size: 22px;
-//   line-height: 24px;
-//   color: $color-dark;
-//   padding-left: 25px;
-//   padding-right: 25px;
-// }
+.accent {
+    background-color: $color-accent;
+}
 
-// .features {
-//   .features-butterfly {
-//     margin-top: 30px;
-//   }
-// }
+
+.features-inner-catalog {
+  h2 {
+      @include h2;
+    margin-top: 90px;
+    margin-bottom: 77px;
+  }
+}
+
+.catalog-search {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 24px;
+  color: $color-dark;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.features {
+  .features-butterfly {
+    margin-top: 30px;
+  }
+}
