--- a/src/styles/common/mixins.scss
+++ b/src/styles/common/mixins.scss
@@ -37,3 +37,24 @@
     min-width: 278px;
   }
 }
+
+
+@mixin h2 {
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 87px;
+  padding-bottom: 18px;
+  text-align: center;
+
+  @media (max-width: $tablet-max) {
+    font-size: 60px;
+    line-height: 82px;
+    padding-bottom: 40px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 36px;
+    line-height: 49px;
+    padding-bottom: 20px;
+  }
+}
