--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/_faq";
 @import "blocks/_reviews.scss";
 @import "blocks/_carousel.scss";
+@import "blocks/form";
+@import "blocks/btn";
