--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -6,6 +6,10 @@
   @include inner;
 }
 
+.contacts-active {
+  background-color: $color-accent;
+}
+
 .contacts-title {
   margin-bottom: 80px;
   @include h2;
@@ -29,7 +33,6 @@
   text-decoration: none;
   color: $color-dark;
 
-
   &.active {
     color: $color-accent;
   }
@@ -45,19 +48,26 @@
 }
 
 .contacts-info {
-  border: 1px solid red;
   flex-shrink: 0;
-  width: 40%;
+  width: 41.67%;
 
   p {
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
+    padding-bottom: 20px;
+    color: $color-dark;
+  }
+  .contacts-number {
+    display: block;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
+    padding-bottom: 20px;
+    color: $color-dark;
   }
 }
-
 .contacts-visual {
-  border: 1px solid red;
   flex-shrink: 0;
-  width: 40%;
+  width: 58.33%;
 }
