--- a/src/styles/blocks/_faq.scss
+++ b/src/styles/blocks/_faq.scss
@@ -3,6 +3,10 @@
   background-color: rgba(51, 51, 51, 0.1);
 }
 
+.faq-active {
+  background-color: $color-accent;
+}
+
 .faq-inner {
   @include inner;
 }
@@ -12,23 +16,16 @@
   margin-bottom: 77px;
 }
 
-.list-option {
-  margin-bottom: 40px;
-  background-color: $color-white;
-  border: 1px solid $color-accent;
+.faq-answer {
+  display: none;
 }
 
-.list-info {
-  display: flex;
-  justify-content: space-between;
-}
-
-.faq-burger {
-  margin: 25px 0;
-  margin-right: 30px;
-}
-
-.faq-info {
+.faq-btn {
+  text-align: left;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
   font-weight: 300;
   font-size: 36px;
   line-height: 49px;
@@ -46,12 +43,15 @@
   }
 }
 
-.desc {
+.faq-answer {
+  padding: 0 20px 20px 20px;
+}
+
+.faq-item-text {
   font-weight: 300;
   font-size: 18px;
   line-height: 25px;
   margin-left: 30px;
-  display: none;
   padding-bottom: 30px;
 
   @media (max-width: $tablet-max) {
@@ -63,4 +63,23 @@
     font-size: 14px;
     line-height: 19px;
   }
+}
+
+.faq-item {
+  margin-top: 40px;
+  border-radius: 4px;
+  background-color: $color-white;
+  border: 1px solid $color-accent;
+}
+
+.faq-item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 30px;
+}
+
+.faq-item-icon {
+  width: 40px;
+  height: 40px;
 }
