--- a/src/styles/blocks/_lead.scss
+++ b/src/styles/blocks/_lead.scss
@@ -1,6 +1,6 @@
 .lead {
   color: $color-dark;
-  background-color: rgba(51, 51, 51, 0.1);
+  background-color: rgba($color-dark, 0.1);
   padding-top: 130px;
   padding-bottom: 130px;
 
@@ -13,99 +13,29 @@
     padding-top: 90px;
     padding-bottom: 90px;
   }
+}
 
-  .lead-inner {
-    @include inner;
-  }
+.lead-inner {
+  @include inner;
+}
 
-  h2 {
-    @include h2;
-  }
+.lead-title {
+  @include h2;
+}
 
-  p {
-    font-size: 28px;
-    line-height: 38px;
-    margin-top: 18px;
-    margin-bottom: 90px;
+.lead-text {
+  font-size: 28px;
+  line-height: 38px;
+  margin-top: 18px;
+  margin-bottom: 90px;
+  text-align: center;
+  width: 100%;
+
+  @media (max-width: $mobile-max) {
+    font-size: 18px;
+    line-height: 25px;
+    margin-bottom: 60px;
     text-align: center;
-    width: 100%;
-
-    @media (max-width: $mobile-max) {
-      font-size: 18px;
-      line-height: 25px;
-      margin-bottom: 60px;
-      text-align: center;
-      padding: 0 10px;
-    }
-  }
-
-  .form {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
-
-    margin-left: -10px;
-    margin-right: -10px;
-
-    @media (max-width: $tablet-max) {
-      margin: 0;
-    }
-  }
-
-  .form-field {
-    flex-basis: 33.33%;
-    padding: 10px;
-    justify-content: space-between;
-
-    @media (max-width: $tablet-max) {
-      flex-basis: 50%;
-    }
-    @media (max-width: $mobile-max) {
-      flex-basis: 100%;
-    }
-  }
-
-  .form-button {
-    @media (max-width: $tablet-max) {
-      flex-basis: 100%;
-      width: 100%;
-    }
-  }
-
-  .form-label {
-    margin: 0;
-    font-size: 20px;
-    line-height: 27px;
-    color: $color-dark;
-  }
-
-  .form-input {
-    padding-top: 35px;
-    padding-bottom: 35px;
-    padding-left: 30px;
-    width: 100%;
-    background: $color-white;
-    border-radius: 6px;
-    font-size: 28px;
-    line-height: 34px;
-    color: $color-dark;
-    border: none;
-  }
-
-  .btn {
-    height: 104px;
-    width: 100%;
-    color: $color-white;
-    border-radius: 6px;
-    text-align: center;
-    font-size: 28px;
-    line-height: 34px;
-    background-color: $color-accent;
-    border: none;
-
-    // @media (max-width: $tablet-max) {
-    //   flex: 1;
-    //   flex-basis: 100%;
-    // }
+    padding: 0 10px;
   }
 }
