--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -22,7 +22,7 @@
   }
 
   li {
-    margin: 0 15px;
+    margin: 0 5px;
 
     @media (max-width: $mobile-max) {
 
@@ -31,6 +31,9 @@
   }
 
   a {
+    display: block;
     color: $color-white;
+    padding: 33px 25px;
+    // background-color: $color-accent;
   }
 }
