--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -1,13 +1,14 @@
-
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans",sans-serif ;
 }
 
 body {
   font-family: $font;
   color: $color-dark;
+}
+
+a {
+  text-decoration: none;
 }
