--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,10 +1,6 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-$h1-fz-mobile: 20px;
-$h1-fz-tablet: 32px;
-$h1-fz-desktop: 48px;
-$h1-fw: 400;
+// изменить. посмотреть где используется
+$font: "Open Sans", sans-serif;
 
 // colors
 $color-dark: #333333;
