--- a/src/styles/blocks/_faq.scss
+++ b/src/styles/blocks/_faq.scss
@@ -31,6 +31,8 @@
   line-height: 49px;
   padding: 25px 0;
   margin-left: 30px;
+  position: relative;
+  
 
   @media (max-width: $tablet-max) {
     font-size: 32px;
