--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,5 +1,9 @@
 .contacts {
   padding: 220px 0 130px;
+
+  @media (max-width: $mobile-max) {
+    padding-bottom: 90px;
+  }
 }
 
 .contacts-inner {
@@ -13,6 +17,14 @@
 .contacts-title {
   margin-bottom: 80px;
   @include h2;
+
+  @media (max-width: $desktop) {
+    margin-bottom: 50px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 30px;
+  }
 }
 
 .tabs {
@@ -22,8 +34,8 @@
 
 .tabs-item {
   margin: 0 30px;
-  list-style-type: none;
   margin-bottom: 40px;
+  list-style-type: none;
 }
 
 .tabs-link {
@@ -45,6 +57,10 @@
     display: flex;
     text-align: center;
   }
+
+  @media (max-width: $mobile-max) {
+    flex-wrap: wrap;
+  }
 }
 
 .contacts-info {
@@ -52,22 +68,63 @@
   width: 41.67%;
 
   p {
+    padding-bottom: 20px;
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
-    padding-bottom: 20px;
     color: $color-dark;
-  }
-  .contacts-number {
-    display: block;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 33px;
-    padding-bottom: 20px;
-    color: $color-dark;
+
+    @media (max-width: $desktop) {
+      padding-bottom: 5px;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 25px;
+    }
+
+    @media (max-width: $mobile-max) {
+      padding-bottom: 5px;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
 }
+
+.contacts-number {
+  display: block;
+  padding-bottom: 20px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 33px;
+  color: $color-dark;
+
+  @media (max-width: $desktop) {
+    padding-bottom: 5px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding-bottom: 5px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+
 .contacts-visual {
   flex-shrink: 0;
   width: 58.33%;
+
+  @media (max-width: $mobile-max) {
+    padding-top: 5px;
+    width: 100%;
+  }
+}
+
+.contacts-map {
+  @media (max-width: $mobile-max) {
+    width: 100%;
+  }
 }
